src/objects/Qvm_ABA_File_Generator__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Number__c</fullName>
        <inlineHelpText>Right justified, blank filled.</inlineHelpText>
        <label>Account Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSB_Number__c</fullName>
        <label>BSB Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_to_be_Processed__c</fullName>
        <inlineHelpText>Must be numeric in the formal of DDMMYY. Must be a valid date. Zero filled.</inlineHelpText>
        <label>Date to be Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Account_Id__c</fullName>
        <description>The qdo id of the account that payments will be deposited too</description>
        <inlineHelpText>The qdo id of the account that payments will be deposited too</inlineHelpText>
        <label>Deposit Account Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of entries on file e.g. &quot;PAYROLL&quot;</inlineHelpText>
        <label>Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <description>Name of User&apos;s Financial Institution</description>
        <inlineHelpText>Must be approved Financial Institution abbreviation. Bank of Queensland&apos;s abbreviation is BQL, Westpac&apos;s abbreviation is &quot;WBC&quot;. Consult your Bank for correct abbreviation.</inlineHelpText>
        <label>Financial Institution</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lodgement_Reference__c</fullName>
        <inlineHelpText>All coded character set valid. Field must be left justified, and contain only the 16 character Employee Benefits Card number; for example 5550033890123456.No leading spaces, zeroes, hyphens or other characters can be included.</inlineHelpText>
        <label>Lodgement Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Of_User__c</fullName>
        <description>Name of Use supplying file.</description>
        <inlineHelpText>Must be User Preferred Specification as advised by User&apos;s FI. Left justified, blank filled. All coded character set valid. Must not be all blanks.</inlineHelpText>
        <label>Name Of User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Remitter__c</fullName>
        <inlineHelpText>Name of originator of the entry. This may vary from Name of the User. All coded character set valid. Must not contain all blanks. Left justified, blank filled.</inlineHelpText>
        <label>Name of Remitter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Identification_Number__c</fullName>
        <inlineHelpText>Must be User Identification Number which is allocated by APCA. Must be numeric, right justified, zero filled.</inlineHelpText>
        <label>User Identification Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Qvm ABA File Generator</label>
</CustomObject>